[workspace]
members=["rustrix/","rustrix-proc-macros/"]
resolver = "2"

[workspace.package]
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["ds1sqe@mensakorea.org"]

[workspace.dependencies]
smallvec = { version = "1.13.2", features = ["const_generics"] }
disjoint-sets = "0.4.2"
im = "15.1.0"
petgraph = "0.7.1"
sparta-proc-macros = { path = "../rust-proc-macros", version = "0.1.0" }

proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
quote = "1.0.38"
syn = { version = "2.0.96", features = ["extra-traits", "full", "visit", "derive"] }

rand = "0.8.5"
